--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "zhehao Jn.jpg"
-  name             : "Your Sidebar Name"
+  avatar           : "zhehao Jin.jpg"
+  name             : "Zhehao Jin"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Earth"
