--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   bio              : "Short biography for the left-hand sidebar"
   location         : "Earth"
   employer         : "Red Brick University"
-  uri              : # URL
+  uri              : https://zhjin-real.github.io # URL
   email            : "jzhzjut@outlook.com" 
 
   # Academic websites
