--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ main:
     url: /publications/
     
   - title: "Sources"
-    url: /sources/
+    url: /opensource/
   
   # - title: "Talks"
     # url: /talks/    
