--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "ZhehaoJin.png"
   name             : "Zhehao Jin"
   pronouns         : # example: "she/her"  
-  bio              : "Postdo, robotic learning "
+  bio              : "Postdoc, robotic learning "
   location         : "Singapore"
   employer         : "Nanyang Technological University"
   uri              : # URL
